# nix-examples

./: .editorconfig  .gitattributes  .gitignore  AUTHORS  Dockerfile  README.md  ci.nix  default.nix  examples.nix
.github/workflows/: main.yml
desktop/C/hello/: app.nix  ci.nix  module.nix  nixpkgs.nix
desktop/C/hello-2.10/: app.nix  cd.nix  ci.nix  nixpkgs.nix
desktop/Go/hello/: app.nix  ci.nix  go.mod  hello.go  module.nix  nixpkgs.nix  shell.nix
desktop/Haskell/answer/: answer.cabal  app.nix  ci.nix  default.nix  nixpkgs.nix  shell.nix  stack.yaml
desktop/Haskell/answer-generated/: app.nix  ci.nix  module.nix  nixpkgs.nix  shell.nix
desktop/Java/AntDateUtils/: .project  build.xml  ci.nix  shell.nix
desktop/Java/SpringBoot/: app-settings.xml.nix  app.nix  ci.nix  pom.xml  shell.nix
desktop/Java/ant-dateutils/: app.nix  ci.nix  module.nix  nixpkgs.nix  shell.nix
distributed/: cd.nix
multitier/: cd-vbox.nix  cd.nix  ci.nix  module.nix
template/: .gitlab-ci.yml  .travis.yml  Jenkinsfile  README.md  app.nix  cd-nixos.nix  cd-vbox.nix  cd.nix  ci.nix  cicd.sh  module.nix  nixpkgs.nix  shell.nix
template/.circleci/: config-docker.yml  config.yml
web/FastAPI/fastapi/: app.nix  cd-nixos.nix  cd-vbox.nix  cd.nix  ci.nix  default.nix  module.nix  nixpkgs.nix  pyproject.toml  shell.nix
web/FastAPI/fastapi/app/scripts/: run.py
web/FastAPI/fastapi/tests/: conftest.py  test_api.py
web/Laravel/: app.nix  cd-nixos.nix  cd-vbox.nix  cd.nix  ci.nix  cicd.sh  default.nix  module.nix  nixpkgs.nix  package-lock.json  package.json  shell.nix
(+145 files in other folders)
